testsuite/tests/annotations/should_fail/annfail12.stderr
annfail12.hs:5:1: error: [GHC-87897]
    • Exception when trying to run compile-time code:
        You were meant to see this error!
    • In the annotation:
        {-# ANN f (error "You were meant to see this error!" :: Int) #-}

